﻿### v1.2.0

* #2 Add custom changelog and not use git commits
* #1 Allow to delete challenges
* Make Debug-messages disabled by default

### v1.1.0

* Add Race Specific spells to be tracked via "OWN-CASTS-DONE-BY-PARTY-MEMBERS"
* 1st stage of heal tracking done by party members
* Fix pet tracking via tooltip
* Fix Solar Beam tracking
* Track party member casts and not npcs
* Add missing L-entries for help-messages
* Fix label for "Time Format" option
* Add options for date and time formats. Add option for icons format (flatten or not)